--- a/client/docs.jade
+++ b/client/docs.jade
@@ -23,6 +23,25 @@
 //             .ui.compact.button.select_tag(class=cloud_tag_class) #{this.name}
 //                 small #{this.count}
 
+
+template(name='cloud')
+    #cloud
+        //- .ui.left.icon.input
+        //-     i.search.icon
+        //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
+        // .ui.hidden.fitted.divider
+        if selected_tags
+            #clear_tags.ui.grey.icon.large.circlar.button
+                i.remove.icon
+            each selected_tags
+                .unselect_tag.ui.grey.large.circular.button
+                    strong #{this}
+        each all_tags
+            .ui.circular.button.select_tag(class=cloud_tag_class) 
+                strong #{this.name}
+
+
+
 template(name='doc_cloud')
     #cloud.ui.basic.segment.container
         .ui.left.icon.input
