--- a/client/models.jade
+++ b/client/models.jade
@@ -1,14 +1,21 @@
 template(name='communication_edit')
-    .ui.header communication
     +text_edit key='person'
     +text_edit key='company'
     +textarea_edit key='notes'
     +boolean_edit key='followup'
     +single_user_edit key='user'
     +single_doc_edit key='work_order' ref_schema='work_order'
+template(name='communication_view')
+    +text_view key='person'
+    +text_view key='company'
+    +textarea_view key='notes'
+    +boolean_view key='followup'
+    +single_user_view key='user'
+    +single_doc_view key='work_order' ref_schema='work_order'
+
+
 
 template(name='vendor_edit')
-    .ui.header vendor
     +text_edit key='title'
     +text_edit key='contact'
     +number_edit key='telephone'
@@ -24,7 +31,6 @@ template(name='vendor_view')
     
     
 template(name='for_rent_edit')
-    .ui.header For Rent
     +text_edit key='title'
     +image_edit key='image'
     +date_edit key='available'
@@ -41,7 +47,6 @@ template(name='for_rent_view')
 
 
 template(name='photo_edit')
-    .ui.header Photo
     +text_edit key='title'
     +image_edit key='image'
     +array_edit key='tags'
@@ -50,6 +55,15 @@ template(name='photo_view')
     +text_view key='title'
     +image_view key='image'
     +array_view key='tags'
+    
+
+
+
+template(name='healthclub_checkin_edit')
+    +single_user_edit key='user'
+template(name='healthclub_checkin_view')
+    .ui.header HC Check In
+    +single_user_view key='user'
     
 
 
