--- a/client/styles.css
+++ b/client/styles.css
@@ -5,6 +5,7 @@ body {
     /*line-height: 200% !important;*/
     /*background: #3d3d3d !important;*/
     background: rgba(200, 200, 200, .1) !important
+    /* background: #0e0e44 !important; */
 }
 
 
