--- a/client/fields.jade
+++ b/client/fields.jade
@@ -229,7 +229,7 @@ template(name='doc_view')
         
 template(name='text_edit')
     .ui.labeled.fluid.input
-        .ui.label
+        .ui.basic.label
             if icon
                 i.grey.icon(class=icon)
             if label
@@ -282,9 +282,6 @@ template(name='phone_view')
         strong &nbsp; #{field_value}
 
 
-template(name='code_edit')
-    .ui.header ace
-    #ace
 
 template(name='number_edit')
     .ui.labeled.fluid.input
@@ -292,6 +289,9 @@ template(name='number_edit')
             if icon
                 i.grey.icon(class=icon)
             |#{label}
+            unless label
+                |#{key}
+
         input.edit_number(type='number' value=field_value placeholder=placeholder)
             
             
@@ -303,7 +303,7 @@ template(name='number_view')
         if label
             |#{label}
         else
-            |#{this}
+            |#{key}
         strong &nbsp; #{field_value}
 
 
@@ -341,6 +341,8 @@ template(name='time_edit')
                 else
                     |#{key}
             input.edit_time(type='time' value=field_value placeholder=placeholder)
+                
+                
 template(name='time_view')
     if icon
         i.grey.icon(class=icon)
@@ -550,6 +552,7 @@ template(name='single_doc_edit')
             if icon
                 i.grey.icon(class=icon)
             |#{calculated_label}
+            |#{slug}
 
 
 template(name='multi_doc_edit')
@@ -636,6 +639,7 @@ template(name='single_user_edit')
 
 
 template(name='single_user_view')
+    .ui.small.grey.header #{label} #{key}
     with field_value
         +big_user_card
             
